[gd_scene load_steps=4 format=2]

[ext_resource path="res://SheetTemplate/Asset/Asset.gd" type="Script" id=1]
[ext_resource path="res://SheetTemplate/Asset/AssetCreator/AssetCreator.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.145098, 0.145098, 0.164706, 1 )

[node name="Asset" type="MarginContainer" groups=[
"Asset",
]]
margin_right = 330.0
margin_bottom = 68.0
rect_min_size = Vector2( 330, 0 )
mouse_default_cursor_shape = 6
size_flags_vertical = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 330.0
margin_bottom = 68.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="Body" type="VBoxContainer" parent="."]
margin_right = 330.0
margin_bottom = 68.0
custom_constants/separation = -1

[node name="Margin" type="MarginContainer" parent="Body"]
margin_right = 330.0
margin_bottom = 40.0
mouse_filter = 1

[node name="Panel" type="Panel" parent="Body/Margin"]
margin_right = 330.0
margin_bottom = 40.0
mouse_filter = 1

[node name="OptMargin" type="MarginContainer" parent="Body/Margin"]
margin_right = 330.0
margin_bottom = 40.0
mouse_filter = 1
custom_constants/margin_right = 100
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="OptType" type="OptionButton" parent="Body/Margin/OptMargin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 230.0
margin_bottom = 30.0
text = "SELECT"
flat = true
items = [ "SELECT", null, false, 0, null ]
selected = 0

[node name="Info" type="MarginContainer" parent="Body"]
margin_top = 39.0
margin_right = 330.0
margin_bottom = 59.0
rect_min_size = Vector2( 0, 20 )
mouse_filter = 1

[node name="Types" type="MarginContainer" parent="Body/Info"]
margin_right = 330.0
margin_bottom = 20.0
mouse_filter = 1
custom_constants/margin_right = 150
custom_constants/margin_top = 10
custom_constants/margin_left = 8
custom_constants/margin_bottom = 10

[node name="Menu" type="MarginContainer" parent="Body"]
visible = false
margin_top = 58.0
margin_right = 330.0
margin_bottom = 82.0
custom_constants/margin_bottom = 5

[node name="Panel" type="Panel" parent="Body/Menu"]
margin_right = 330.0
margin_bottom = 19.0

[node name="HBox" type="HBoxContainer" parent="Body/Menu"]
margin_right = 330.0
margin_bottom = 24.0
custom_constants/separation = 10

[node name="CheckBoxCreator" type="CheckBox" parent="Body/Menu/HBox"]
margin_right = 74.0
margin_bottom = 24.0
pressed = true
text = "Creator"

[node name="CheckBoxView" type="CheckBox" parent="Body/Menu/HBox"]
margin_left = 84.0
margin_right = 142.0
margin_bottom = 24.0
text = "View"

[node name="AssetCreator" parent="Body" instance=ExtResource( 2 )]
visible = false
margin_top = 58.0
margin_right = 330.0
margin_bottom = 158.0

[node name="Itens" type="MarginContainer" parent="Body"]
margin_top = 58.0
margin_right = 330.0
margin_bottom = 68.0
mouse_filter = 1
custom_constants/margin_right = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 10

[node name="Body" type="VBoxContainer" parent="Body/Itens"]
margin_left = 8.0
margin_right = 322.0

[node name="Control" type="Control" parent="."]
visible = false
margin_right = 330.0
margin_bottom = 68.0

[node name="Panel" type="Panel" parent="Control"]
modulate = Color( 0, 0, 0, 0.466667 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonDelete" type="Button" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -40.0
margin_top = -4.0
margin_right = 40.0
margin_bottom = 16.0
text = "DELETE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Delete" type="MarginContainer" parent="."]
visible = false
margin_right = 330.0
margin_bottom = 68.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="Panel" type="Panel" parent="Delete"]
margin_right = 330.0
margin_bottom = 68.0

[node name="Body" type="VBoxContainer" parent="Delete"]
margin_right = 330.0
margin_bottom = 68.0

[node name="Margin" type="MarginContainer" parent="Delete/Body"]
margin_right = 974.0
margin_bottom = 125.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="Delete/Body/Margin"]
margin_right = 974.0
margin_bottom = 125.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Delete/Body/Margin/CenterContainer"]
margin_left = 333.0
margin_top = 55.0
margin_right = 640.0
margin_bottom = 69.0
text = "Are you sure you wante to Delete this Progress?"
align = 1
valign = 1

[node name="Options" type="MarginContainer" parent="Delete/Body"]
margin_top = 129.0
margin_right = 974.0
margin_bottom = 169.0
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Delete/Body/Options"]
margin_right = 974.0
margin_bottom = 20.0
custom_constants/separation = 23
alignment = 1

[node name="ButtonNo" type="Button" parent="Delete/Body/Options/HBoxContainer"]
margin_left = 443.0
margin_right = 473.0
margin_bottom = 20.0
text = "No"

[node name="ButtonYes" type="Button" parent="Delete/Body/Options/HBoxContainer"]
margin_left = 496.0
margin_right = 530.0
margin_bottom = 20.0
text = "Yes"

[connection signal="gui_input" from="." to="." method="_on_Asset_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Asset_mouse_entered"]
[connection signal="item_selected" from="Body/Margin/OptMargin/OptType" to="." method="_on_OptType_item_selected"]
[connection signal="built" from="Body/AssetCreator" to="." method="_on_AssetCreator_built"]
[connection signal="pressed" from="Control/ButtonDelete" to="." method="_on_ButtonDelete_pressed"]
[connection signal="pressed" from="Delete/Body/Options/HBoxContainer/ButtonNo" to="." method="_on_ButtonNo_pressed"]
[connection signal="pressed" from="Delete/Body/Options/HBoxContainer/ButtonYes" to="." method="_on_ButtonYes_pressed"]
